force-app/main/default/objects/Quote_Line_Item__c/fields/Calculated_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Unit_Price__c</fullName>
    <formula>Unit_Price__c  - Discounted_PriceD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>