force-app/main/default/objects/Quote_Line_Item__c/fields/Discounted_PriceD__c.field-meta.xml
<CustomField>
    <fullName>Discounted_PriceD__c</fullName>
    <formula>Unit_Price__c  *  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>