force-app/main/default/objects/Quote_Line_Item__c/fields/Discounted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Unit_Price__c</fullName>
    <label>Final Price(Manual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>