force-app/main/default/objects/Quote_Line_Item__c/fields/Final_Price_Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_Final_Price__c</fullName>
    <label>(Final Price) Final Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>