force-app/main/default/objects/Quote_Line_Item__c/fields/FinalF__c.field-meta.xml
<CustomField>
    <fullName>FinalF__c</fullName>
    <formula>IF(
    NOT(Discounted_Unit_Price__c==0),
      Discounted_Unit_Price__c * Quantity__c,
    Calculated_Unit_Price__c * Quantity__c
   
    
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>