force-app/main/default/objects/Quote_Line_Item__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunities</label>
    <referenceTo>Opportunities__c</referenceTo>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>