force-app/main/default/objects/Quote_Line_Item__c/fields/PowerHP__c.field-meta.xml
<CustomField>
    <fullName>PowerHP__c</fullName>
    <label>Power in HP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>