force-app/main/default/objects/Quote_Line_Item__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>