force-app/main/default/objects/Quote_Line_Item__c/fields/Quoted_Price_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price_Sub_Total__c</fullName>
    <label>(Quoted Price)Sub Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>