force-app/main/default/objects/Quote_Line_Item__c/fields/QuotedQ__c.field-meta.xml
<CustomField>
    <fullName>QuotedQ__c</fullName>
    <formula>Unit_Price__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoted Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>