force-app/main/default/objects/Quote_Line_Item__c/fields/Quotes__c.field-meta.xml
<CustomField>
    <fullName>Quotes__c</fullName>
    <label>Quotes</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>