force-app/main/default/objects/Quote_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Name__c</columns>
    <columns>PowerHP__c</columns>
    <columns>Type__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Discount__c</columns>
    <columns>FinalF__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>